--- a/style.css
+++ b/style.css
@@ -6,6 +6,19 @@
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(16, 1fr);
 }
+.center {
+  position: relative;
+  top: 5em;
+  left: 33%;
+  right: 33%;
+}
+
+h1 {
+  text-align: center;
+  font-size: 55px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
 
 .grid-container-items {
   border: 1px solid black;
