--- a/style.css
+++ b/style.css
@@ -9,8 +9,6 @@
 .center {
   position: relative;
   top: 5em;
-  left: 33%;
-  right: 33%;
 }
 
 h1 {
@@ -22,4 +20,9 @@ h1 {
 
 .grid-container-items {
   border: 1px solid black;
+}
+
+.button {
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
 }
