--- a/style.css
+++ b/style.css
@@ -5,12 +5,11 @@
   display: grid;
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(16, 1fr);
-  left: 33%;
-  right: 33%;
 }
+
 .center {
-  position: relative;
-  top: 5em;
+  display: flex;
+  justify-content: center;
 }
 
 h1 {
@@ -28,6 +27,5 @@ h1 {
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
   background-color: lightslategrey;
-  position: relative;
-  left: 47%;
+  margin: 1em;
 }
